[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Convoy/Convoy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GUI/Hand Cursor/Hand Selector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Convoy/Item_List_Scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/music/Swift As Wind.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/backgrounds/FE BG 4.jpg" type="Texture2D" id=5]
[ext_resource path="res://assets/font/Main Font.ttf" type="FontFile" id=6]
[ext_resource path="res://Scenes/GUI/Unit Selectors/Unit Picker Solo.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/font/Action Selector Font.tres" type="FontFile" id=8]
[ext_resource path="res://Scenes/GUI/Unit Inventory Display/Unit Inventory Display.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/GUI/Item Screen/Yes No Box Generic.tscn" type="PackedScene" id=10]

[sub_resource type="FontFile" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "Fade"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.7 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Convoy UI" type="Node2D"]
visible = false
modulate = Color( 1, 1, 1, 0 )
z_index = 10
z_as_relative = false
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 11.0
offset_right = 240.0
offset_bottom = 159.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 11.0
color = Color( 0.172549, 0.164706, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Convoy Label" type="Label" parent="ColorRect"]
offset_right = 1199.0
offset_bottom = 55.0
scale = Vector2( 0.2, 0.2 )
theme_override_fonts/font = ExtResource( 8 )
text = "Convoy"
align = 1
valign = 1

[node name="All Lists" type="Control" parent="."]
offset_left = 9.72192
offset_top = 7.93105
offset_right = 49.7219
offset_bottom = 47.931
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sword" parent="All Lists" instance=ExtResource( 3 )]
visible = false

[node name="Lance" parent="All Lists" instance=ExtResource( 3 )]

[node name="Axe" parent="All Lists" instance=ExtResource( 3 )]

[node name="Bow" parent="All Lists" instance=ExtResource( 3 )]

[node name="Tome" parent="All Lists" instance=ExtResource( 3 )]

[node name="Heal" parent="All Lists" instance=ExtResource( 3 )]

[node name="Consumable" parent="All Lists" instance=ExtResource( 3 )]

[node name="Hand Selector" parent="." instance=ExtResource( 2 )]
visible = false
offset_left = -300.0
offset_top = -300.0
offset_right = -284.0
offset_bottom = -287.0

[node name="Convoy Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Item Stats" type="Label" parent="."]
offset_left = 1.0
offset_top = 12.0
offset_right = 383.0
offset_bottom = 466.0
scale = Vector2( 0.3, 0.3 )
theme_override_fonts/font = SubResource( 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.290196, 0.290196, 0.290196, 1 )
text = "\"Item Stats\""
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit Picker Solo" parent="." instance=ExtResource( 7 )]

[node name="Unit Inventory Display" parent="." instance=ExtResource( 9 )]
visible = false
offset_left = 36.9093
offset_top = 26.4426
offset_right = 36.9093
offset_bottom = 26.4426
scale = Vector2( 0.8, 0.8 )

[node name="Yes No Box Generic" parent="." instance=ExtResource( 10 )]
offset_left = 104.645
offset_top = 25.4561
offset_right = 104.645
offset_bottom = 25.4561

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 2 )
[connection signal="no_inputted" from="Yes No Box Generic" to="." method="_on_no_selected_from_generic"]
[connection signal="option_selected" from="Yes No Box Generic" to="." method="_on_Yes_No_Box_Generic_option_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
